// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing WithStyles(MessageBox) component render confirm 1`] = `
<div
  aria-labelledby="message-box-title-confirm"
  className="MuiModal-root-26 MuiDialog-root-15 MuiDialog-scrollPaper-16"
  role="dialog"
>
  <div
    aria-hidden="true"
    className="MuiBackdrop-root-28"
    onClick={[Function]}
    style={
      Object {
        "opacity": 1,
        "willChange": "opacity",
      }
    }
  />
  <div
    className="MuiPaper-root-30 MuiPaper-elevation24-56 MuiPaper-rounded-31 MuiDialog-paper-18 MessageBox-dialog-1 MuiDialog-paperScrollPaper-19"
    role="document"
    style={
      Object {
        "opacity": 1,
        "willChange": "opacity",
      }
    }
    tabIndex="-1"
  >
    <h2
      className="MuiTypography-root-57 MuiTypography-title-63 MessageBox-confirm-5"
      id="message-box-title-confirm"
    >
      Confirmation
    </h2>
    <div
      className="MuiDialogContent-root-81 MessageBox-dialogContent-2"
    >
      <div
        className="MuiGrid-container-82 MuiGrid-align-items-xs-baseline-93 MessageBox-content-3"
      >
        <div
          className="MuiGrid-item-83 MuiGrid-grid-xs-4-113 MuiGrid-grid-sm-2-125 MuiGrid-grid-md-2-139 GridItem-grid-178"
          style={
            Object {
              "padding": "0px",
            }
          }
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-179 MessageBox-confirmIcon-6"
            focusable="false"
            style={
              Object {
                "float": "left",
                "fontSize": 100,
                "paddingTop": "5px",
              }
            }
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
            />
          </svg>
        </div>
        <div
          className="MuiGrid-item-83 GridItem-grid-178"
        >
          <p>
            Hello
          </p>
        </div>
      </div>
    </div>
    <div
      className="MuiDialogActions-root-186"
    >
      <button
        className="MuiButtonBase-root-212 MuiButton-root-188 MuiButton-contained-197 MuiButton-raised-200 MessageBox-button-4 MuiDialogActions-action-187"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
        value="CANCEL"
      >
        <span
          className="MuiButton-label-189"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-215"
        />
      </button>
      <button
        autoFocus={true}
        className="MuiButtonBase-root-212 MuiButton-root-188 MuiButton-contained-197 MuiButton-containedPrimary-198 MuiButton-raised-200 MuiButton-raisedPrimary-201 MessageBox-button-4 MuiDialogActions-action-187"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
        value="OK"
      >
        <span
          className="MuiButton-label-189"
        >
          Ok
        </span>
        <span
          className="MuiTouchRipple-root-215"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Testing WithStyles(MessageBox) component render danger 1`] = `
<div
  aria-labelledby="message-box-title-danger"
  className="MuiModal-root-26 MuiDialog-root-15 MuiDialog-scrollPaper-16"
  role="dialog"
>
  <div
    aria-hidden="true"
    className="MuiBackdrop-root-28"
    onClick={[Function]}
    style={
      Object {
        "opacity": 1,
        "willChange": "opacity",
      }
    }
  />
  <div
    className="MuiPaper-root-30 MuiPaper-elevation24-56 MuiPaper-rounded-31 MuiDialog-paper-18 MessageBox-dialog-1 MuiDialog-paperScrollPaper-19"
    role="document"
    style={
      Object {
        "opacity": 1,
        "willChange": "opacity",
      }
    }
    tabIndex="-1"
  >
    <h2
      className="MuiTypography-root-57 MuiTypography-title-63 MessageBox-danger-13"
      id="message-box-title-danger"
    >
      Error
    </h2>
    <div
      className="MuiDialogContent-root-81 MessageBox-dialogContent-2"
    >
      <div
        className="MuiGrid-container-82 MuiGrid-align-items-xs-baseline-93 MessageBox-content-3"
      >
        <div
          className="MuiGrid-item-83 MuiGrid-grid-xs-4-113 MuiGrid-grid-sm-2-125 MuiGrid-grid-md-2-139 GridItem-grid-178"
          style={
            Object {
              "padding": "0px",
            }
          }
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-179 MessageBox-dangerIcon-14"
            focusable="false"
            style={
              Object {
                "float": "left",
                "fontSize": 100,
                "paddingTop": "5px",
              }
            }
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
            />
          </svg>
        </div>
        <div
          className="MuiGrid-item-83 GridItem-grid-178"
        >
          <p>
            Hello
          </p>
        </div>
      </div>
    </div>
    <div
      className="MuiDialogActions-root-186"
    >
      <button
        autoFocus={true}
        className="MuiButtonBase-root-212 MuiButton-root-188 MuiButton-contained-197 MuiButton-containedPrimary-198 MuiButton-raised-200 MuiButton-raisedPrimary-201 MessageBox-button-4 MuiDialogActions-action-187"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
        value="OK"
      >
        <span
          className="MuiButton-label-189"
        >
          Ok
        </span>
        <span
          className="MuiTouchRipple-root-215"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Testing WithStyles(MessageBox) component render info 1`] = `
<div
  aria-labelledby="message-box-title-info"
  className="MuiModal-root-26 MuiDialog-root-15 MuiDialog-scrollPaper-16"
  role="dialog"
>
  <div
    aria-hidden="true"
    className="MuiBackdrop-root-28"
    onClick={[Function]}
    style={
      Object {
        "opacity": 1,
        "willChange": "opacity",
      }
    }
  />
  <div
    className="MuiPaper-root-30 MuiPaper-elevation24-56 MuiPaper-rounded-31 MuiDialog-paper-18 MessageBox-dialog-1 MuiDialog-paperScrollPaper-19"
    role="document"
    style={
      Object {
        "opacity": 1,
        "willChange": "opacity",
      }
    }
    tabIndex="-1"
  >
    <h2
      className="MuiTypography-root-57 MuiTypography-title-63 MessageBox-info-7"
      id="message-box-title-info"
    >
      Information
    </h2>
    <div
      className="MuiDialogContent-root-81 MessageBox-dialogContent-2"
    >
      <div
        className="MuiGrid-container-82 MuiGrid-align-items-xs-baseline-93 MessageBox-content-3"
      >
        <div
          className="MuiGrid-item-83 MuiGrid-grid-xs-4-113 MuiGrid-grid-sm-2-125 MuiGrid-grid-md-2-139 GridItem-grid-178"
          style={
            Object {
              "padding": "0px",
            }
          }
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-179 MessageBox-infoIcon-8"
            focusable="false"
            style={
              Object {
                "float": "left",
                "fontSize": 100,
                "paddingTop": "5px",
              }
            }
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
        </div>
        <div
          className="MuiGrid-item-83 GridItem-grid-178"
        >
          <p>
            Hello
          </p>
        </div>
      </div>
    </div>
    <div
      className="MuiDialogActions-root-186"
    >
      <button
        autoFocus={true}
        className="MuiButtonBase-root-212 MuiButton-root-188 MuiButton-contained-197 MuiButton-containedPrimary-198 MuiButton-raised-200 MuiButton-raisedPrimary-201 MessageBox-button-4 MuiDialogActions-action-187"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
        value="OK"
      >
        <span
          className="MuiButton-label-189"
        >
          Ok
        </span>
        <span
          className="MuiTouchRipple-root-215"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Testing WithStyles(MessageBox) component render success 1`] = `
<div
  aria-labelledby="message-box-title-success"
  className="MuiModal-root-26 MuiDialog-root-15 MuiDialog-scrollPaper-16"
  role="dialog"
>
  <div
    aria-hidden="true"
    className="MuiBackdrop-root-28"
    onClick={[Function]}
    style={
      Object {
        "opacity": 1,
        "willChange": "opacity",
      }
    }
  />
  <div
    className="MuiPaper-root-30 MuiPaper-elevation24-56 MuiPaper-rounded-31 MuiDialog-paper-18 MessageBox-dialog-1 MuiDialog-paperScrollPaper-19"
    role="document"
    style={
      Object {
        "opacity": 1,
        "willChange": "opacity",
      }
    }
    tabIndex="-1"
  >
    <h2
      className="MuiTypography-root-57 MuiTypography-title-63 MessageBox-success-9"
      id="message-box-title-success"
    >
      Successfully
    </h2>
    <div
      className="MuiDialogContent-root-81 MessageBox-dialogContent-2"
    >
      <div
        className="MuiGrid-container-82 MuiGrid-align-items-xs-baseline-93 MessageBox-content-3"
      >
        <div
          className="MuiGrid-item-83 MuiGrid-grid-xs-4-113 MuiGrid-grid-sm-2-125 MuiGrid-grid-md-2-139 GridItem-grid-178"
          style={
            Object {
              "padding": "0px",
            }
          }
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-179 MessageBox-successIcon-10"
            focusable="false"
            style={
              Object {
                "float": "left",
                "fontSize": 100,
                "paddingTop": "5px",
              }
            }
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
        </div>
        <div
          className="MuiGrid-item-83 GridItem-grid-178"
        >
          <p>
            Hello
          </p>
        </div>
      </div>
    </div>
    <div
      className="MuiDialogActions-root-186"
    >
      <button
        autoFocus={true}
        className="MuiButtonBase-root-212 MuiButton-root-188 MuiButton-contained-197 MuiButton-containedPrimary-198 MuiButton-raised-200 MuiButton-raisedPrimary-201 MessageBox-button-4 MuiDialogActions-action-187"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
        value="OK"
      >
        <span
          className="MuiButton-label-189"
        >
          Ok
        </span>
        <span
          className="MuiTouchRipple-root-215"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Testing WithStyles(MessageBox) component render warning 1`] = `
<div
  aria-labelledby="message-box-title-warning"
  className="MuiModal-root-26 MuiDialog-root-15 MuiDialog-scrollPaper-16"
  role="dialog"
>
  <div
    aria-hidden="true"
    className="MuiBackdrop-root-28"
    onClick={[Function]}
    style={
      Object {
        "opacity": 1,
        "willChange": "opacity",
      }
    }
  />
  <div
    className="MuiPaper-root-30 MuiPaper-elevation24-56 MuiPaper-rounded-31 MuiDialog-paper-18 MessageBox-dialog-1 MuiDialog-paperScrollPaper-19"
    role="document"
    style={
      Object {
        "opacity": 1,
        "willChange": "opacity",
      }
    }
    tabIndex="-1"
  >
    <h2
      className="MuiTypography-root-57 MuiTypography-title-63 MessageBox-warning-11"
      id="message-box-title-warning"
    >
      Warning
    </h2>
    <div
      className="MuiDialogContent-root-81 MessageBox-dialogContent-2"
    >
      <div
        className="MuiGrid-container-82 MuiGrid-align-items-xs-baseline-93 MessageBox-content-3"
      >
        <div
          className="MuiGrid-item-83 MuiGrid-grid-xs-4-113 MuiGrid-grid-sm-2-125 MuiGrid-grid-md-2-139 GridItem-grid-178"
          style={
            Object {
              "padding": "0px",
            }
          }
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-179 MessageBox-warningIcon-12"
            focusable="false"
            style={
              Object {
                "float": "left",
                "fontSize": 100,
                "paddingTop": "5px",
              }
            }
            viewBox="0 0 24 24"
          >
            <path
              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
            />
          </svg>
        </div>
        <div
          className="MuiGrid-item-83 GridItem-grid-178"
        >
          <p>
            Hello
          </p>
        </div>
      </div>
    </div>
    <div
      className="MuiDialogActions-root-186"
    >
      <button
        autoFocus={true}
        className="MuiButtonBase-root-212 MuiButton-root-188 MuiButton-contained-197 MuiButton-containedPrimary-198 MuiButton-raised-200 MuiButton-raisedPrimary-201 MessageBox-button-4 MuiDialogActions-action-187"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
        value="OK"
      >
        <span
          className="MuiButton-label-189"
        >
          Ok
        </span>
        <span
          className="MuiTouchRipple-root-215"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Testing WithStyles(MessageBox) component render without error 1`] = `
<div
  aria-labelledby="message-box-title-info"
  className="MuiModal-root-26 MuiDialog-root-15 MuiDialog-scrollPaper-16"
  role="dialog"
>
  <div
    aria-hidden="true"
    className="MuiBackdrop-root-28"
    onClick={[Function]}
    style={
      Object {
        "opacity": 1,
        "willChange": "opacity",
      }
    }
  />
  <div
    className="MuiPaper-root-30 MuiPaper-elevation24-56 MuiPaper-rounded-31 MuiDialog-paper-18 MessageBox-dialog-1 MuiDialog-paperScrollPaper-19"
    role="document"
    style={
      Object {
        "opacity": 1,
        "willChange": "opacity",
      }
    }
    tabIndex="-1"
  >
    <h2
      className="MuiTypography-root-57 MuiTypography-title-63 MessageBox-info-7"
      id="message-box-title-info"
    >
      Information
    </h2>
    <div
      className="MuiDialogContent-root-81 MessageBox-dialogContent-2"
    >
      <div
        className="MuiGrid-container-82 MuiGrid-align-items-xs-baseline-93 MessageBox-content-3"
      >
        <div
          className="MuiGrid-item-83 MuiGrid-grid-xs-4-113 MuiGrid-grid-sm-2-125 MuiGrid-grid-md-2-139 GridItem-grid-178"
          style={
            Object {
              "padding": "0px",
            }
          }
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-179 MessageBox-infoIcon-8"
            focusable="false"
            style={
              Object {
                "float": "left",
                "fontSize": 100,
                "paddingTop": "5px",
              }
            }
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
        </div>
        <div
          className="MuiGrid-item-83 GridItem-grid-178"
        >
          <p>
            Hello
          </p>
        </div>
      </div>
    </div>
    <div
      className="MuiDialogActions-root-186"
    >
      <button
        autoFocus={true}
        className="MuiButtonBase-root-212 MuiButton-root-188 MuiButton-contained-197 MuiButton-containedPrimary-198 MuiButton-raised-200 MuiButton-raisedPrimary-201 MessageBox-button-4 MuiDialogActions-action-187"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
        value="OK"
      >
        <span
          className="MuiButton-label-189"
        >
          Ok
        </span>
        <span
          className="MuiTouchRipple-root-215"
        />
      </button>
    </div>
  </div>
</div>
`;
